# Interviewer-Goat

./: .gitignore  001_init.sql  Cargo.toml  HUD.tsx  LICENSE  README.md  asr.rs  autoHide.tsx  demo.html  end_call.rs  guardrails.rs  index.html  notes.rs  ocr.rs  orchestrator.rs  package-lock.json  package.json  pipeline.rs  rag.rs  router.rs  storage.rs  tauri.conf.json  test_audio.rs  test_real_audio.rs  vad.rs
.specstory/history/: 2025-08-17_01-57Z-designing-a-privacy-first-meeting-copilot-mvp.md
src/: HUD.tsx  asr.rs  audio.rs  guardrails.rs  llm.rs  main.rs  rag.rs  router.rs  storage.rs  vad.rs
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  main.rs  main.tsx  orchestrator.rs  style.css  vad.rs
