[package]
name = "meeting-copilot"
version = "0.1.0"
edition = "2021"
default-run = "meeting-copilot"

[[bin]]
name = "test_audio"
path = "test_audio.rs"

[[bin]]
name = "test_real_audio"
path = "test_real_audio.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
# whisper-rs = "0.10"  # Requires cmake - disabled for now
regex = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hound = "3.5"
cpal = "0.15"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
# candle-core = "0.3"      # Heavy ML deps - disabled for MVP
# candle-transformers = "0.3"
# candle-nn = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
