[package]
name = "meeting-copilot"
version = "0.1.0"
description = "Privacy-first meeting copilot MVP"
authors = ["Meeting Copilot Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
whisper-rs = "0.10"
regex = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hound = "3.5"
cpal = "0.15"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
candle-core = "0.3"
candle-transformers = "0.3"
candle-nn = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "meeting-copilot"
path = "src/main.rs"
